--- a/src/index.css
+++ b/src/index.css
@@ -1,15 +1,18 @@
 html {
-  height: 100%;
+  /* height: 100%; */
 }
 
 body {
-  height: 100%;
-  margin: 0;
+  /* height: 100%; */
+  margin: 0 auto;
+  max-width: 992px;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
     sans-serif;
+  font-family: 'Maven Pro', sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  line-height: 1.5;
 }
 
 code {
@@ -22,6 +25,6 @@ code {
 }
 
 #root {
-  height: 100%;
+  /* height: 100%; */
   box-sizing: border-box;
 }
