--- a/src/index.css
+++ b/src/index.css
@@ -1,11 +1,9 @@
 html {
-  /* height: 100%; */
+  min-height: 100%;
 }
 
 body {
-  /* height: 100%; */
-  margin: 0 auto;
-  max-width: 992px;
+  height: 100vh;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
     sans-serif;
@@ -31,6 +29,7 @@ h4,
 h5,
 h6,
 p,
+body,
 ul[class],
 ol[class],
 li,
