--- a/src/index.css
+++ b/src/index.css
@@ -11,6 +11,9 @@ body {
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   line-height: 1.5;
+  transition-property: background-color;
+  transition-duration: 0.5s;
+  transition-timing-function: ease;
 }
 
 code {
