Updage global button styles

--- a/src/index.css
+++ b/src/index.css
@@ -49,9 +49,10 @@ a {
 }
 
 button {
-  background-color: none;
+  background-color: transparent;
   border: none;
   outline: none;
+  padding: 0;
 }
 
 #root {
