--- a/src/index.css
+++ b/src/index.css
@@ -4,7 +4,7 @@ html {
 
 body {
   height: 100vh;
-  font-family: 'Inconsolata', monospace, -apple-system, BlinkMacSystemFont,
+  font-family: 'Montserrat', monospace, -apple-system, BlinkMacSystemFont,
     'Segoe UI', 'Roboto', 'Oxygen', 'Ubuntu', 'Cantarell', 'Fira Sans',
     'Droid Sans', 'Helvetica Neue', sans-serif;
   -webkit-font-smoothing: antialiased;
